2008-11-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/threadhandler.c: M32R uses different name for init.

2008-11-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/Makefile.am: Add _execve() so we can use newlib posix support
	directory and eliminate code in RTEMS.
	* posix/src/_execve.c: New file.

2008-11-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1333/cpukit
	* libcsupport/include/rtems/termiostypes.h: Typo on type name -- should
	be rtems_device_minor_number.

2008-10-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1331/networking
	* libmisc/shell/shell.c, telnetd/check_passwd.c, telnetd/telnetd.c,
	telnetd/telnetd.h: Improve comments and explanation of options to
	rtems_telnetd_initialize. Add extra newline to login sequence from
	shell.

2008-10-14	Tim Cussins <timcussins@eml.cc>

	PR 1330/cpukit
	* libcsupport/src/free.c: Should print begin field not start field.

2008-10-14	Wei Shen <cquark@gmail.com>

	* Makefile.am, preinstall.am, libcsupport/src/mknod.c,
	libcsupport/src/open.c, libcsupport/src/pipe.c, libfs/Makefile.am,
	libfs/preinstall.am, libfs/src/imfs/imfs.h,
	libfs/src/imfs/imfs_creat.c, libfs/src/imfs/imfs_debug.c,
	libfs/src/imfs/imfs_eval.c, libfs/src/imfs/imfs_initsupp.c,
	libfs/src/imfs/imfs_mknod.c, libfs/src/imfs/imfs_stat.c,
	libfs/src/imfs/memfile.c: Initial commit of POSIX pipe support.
	* libfs/src/imfs/imfs_fifo.c, libfs/src/pipe/fifo.c,
	libfs/src/pipe/pipe.c, libfs/src/pipe/pipe.h: New files.

2008-10-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/printk.c: Addresses can be larger than integers
	so use long for %p formats.
	* score/inline/rtems/score/address.inl: Offsets can be positive or
	negative, so use int32_t.  Also do math with intptr_t since there
	are cases where the number of bits in an address do not equal the
	number of bits in an integer.
	* score/inline/rtems/score/heap.inl: Offsets can be positive or
	negative, so use int32_t.
